<resources>
    <string name="app_name">Workout Diary</string>
    <string name="app_intro">Start keeping your workout diary</string>
    <string name="text_bottom">Sign in to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="age_hint">Age</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Sumbit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="code_hint">code</string>
    <string name="confirm_email">Confrim your email</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_text">Please eneter your email to reset password.</string>
    <string name="setup_password">Setup password</string>
    <string name="workouts">Workouts</string>
    <string name="logout">Logout</string>
    <string name="restore_password">Restore password</string>
    <string name="title">Title</string>
    <string name="date">23 July 2020</string>
    <string name="title_of_activity">Title of activity…</string>
    <string name="description_of_activity">Description of activity…</string>
    <string name="date_of_activity">Date of activity…</string>
    <string name="description">Description</string>
    <string name="confirm_email_text">%1$s, we have sent a confirmation code on %2$s. Please check your email and enter the code to confirm your email.</string>
    <string name="setup_password_text">We have sent a confirmation code on %1$s. Please check your email, enter the code and new password.</string>
</resources>
