<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signup.SignUpActivity">

    <LinearLayout
        android:id="@+id/fieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/firstname_field"
            android:hint="@string/firstname_hint"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#cba456"
            app:met_singleLineEllipsis="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/lastname_field"
            android:hint="@string/lastname_hint"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/age_field"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/email_field"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/password_field"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true" />
    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/fieldTitle"
        android:layout_margin="35dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_cancel"
            android:fontFamily="@font/montserrat"
            android:text="@string/cancel"
            android:layout_marginTop="10dp"
            android:textColor="@color/dimGray" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/signUpBtn"
            android:fontFamily="@font/montserrat"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>